# Carmanac

./: CLAUDE.md  LICENSE  PROGRESS.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 00531f09d08f_reconciliation_ready_entity_fact_split_.py  06582eecf0b2_baseline_phase_1_schema.py
carmanac/: config.py
carmanac/db/: base.py  session.py
carmanac/db/models/: __init__.py  attributes.py  hierarchy.py  lookups.py  powertrain.py  provenance.py
db/: 00_extensions.sql  README.md  docker-compose.yml
docs/: schema.md  schema_phase1.sql
docs/decisions/: 0001-leaf-entity-naming.md  0002-entity-fact-split-and-field-provenance.md  0003-raw-landing-zone-and-external-ids.md
infra/: README.md  docker-compose.yml
scripts/: seed_demo.py
